workshop04/task3/wp-deploy.yaml
# WPDB
---
# POD V1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpapp-deploy
  labels:
    name: wpapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wpapp-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: wpapp-pod
      labels:
        name: wpapp-pod
        dept: eng
        purpose: application
      namespace: mywp
    spec:
      volumes:
        - name: wpapp-vol
          persistentVolumeClaim:
            claimName: data-pvc
      containers:
        - name: wpapp-pod
          image: wordpress:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: app-port
              containerPort: 80
          volumeMounts:
            - name: wpapp-vol
              mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wpapp-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: app-port
  selector:
    name: wpapp-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpapp-ing
  labels:
    name: wpapp-ing
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  ingressClassName: nginx
  rules:
    - host: wp-139.59.216.163.nip.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wpapp-svc
                port:
                  number: 80
