workshop04/task3/wp-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wp-netpol-deny-all-app
  labels:
    name: wp-netpol-deny-all-app
  namespace: mywp
spec:
  podSelector:
    matchLabels:
      name: wpapp-pod
      namespace: mywp
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wp-netpol-deny-all-db
  labels:
    name: wp-netpol-deny-all-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
      namespace: mywp
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wp-netpol-allow-db
  labels:
    name: wp-netpol-allow-db
    namespace: mywp
spec:
  podSelector:
    matchLabels:
      role: master
      namespace: mywp
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: wpapp-pod
          namespace: mywp

  egress:
  - to:
    - podSelector:
        matchLabels:
           name: wpapp-pod
           namespace: mywp
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wp-netpol-allow-apo
  labels:
    name: wp-netpol-allow-app
    namespace: mywp
spec:
  podSelector:
    matchLabels:
      name: wpapp-pod
      namespace: mywp
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: ingress-nginx
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      - podSelector:
          matchLabels:
              role: master
              namespace: mywp
  egress:
    - to:
      - podSelector:
          matchLabels:
              role: master
              namespace: mywp
